--- a/styles.css
+++ b/styles.css
@@ -31,20 +31,15 @@ nav ul li a {
     text-decoration: none;
 }
 
-#slideshow-container {
+.swiper-container {
     width: 80%;
+    height: 500px;
     margin: 20px auto;
     background: #fff;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
-.slideshow {
-    position: relative;
-    height: 500px;
-    overflow: hidden;
-}
-
-.slideshow img {
+.swiper-wrapper img {
     width: 100%;
     height: 100%;
     object-fit: cover;
