--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ nav ul li a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+    background-color: rgba(66, 71, 69, 0.526); /* Semi-transparent background */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -72,9 +72,7 @@ nav ul li a {
 .greeting-container h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
-    color: pink;
-    text-align: center; /* Center text alignment */
-    word-wrap: break-word;
+    color: rgb(192, 255, 245);
 }
 
 .hearts {
@@ -127,7 +125,7 @@ nav ul li a {
 /* Month navigation styles */
 #month-list {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Create 4 equal columns */
+    grid-template-columns: repeat(5, 1fr); /* Create 4 equal columns */
     gap: 10px; /* Space between the grid items */
     padding: 10px 0; /* Add some padding for spacing */
     margin: 0; /* Remove default margin */
